--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,6 +10,7 @@ material = "1.12.0"
 activity = "1.9.0"
 googleScanner = "16.1.0"
 playServices = "18.5.0"
+qrScanner = "4.3.0"
 constraintlayout = "2.1.4"
 
 [libraries]
@@ -23,6 +24,8 @@ androidx-activity = { group = "androidx.activity", name = "activity", version.re
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
 google-scanner = { group = "com.google.android.gms", name = "play-services-code-scanner", version.ref = "googleScanner" }
 play-services = { group = "com.google.android.gms", name = "play-services-base", version.ref = "playServices" }
+qr_scanner = { group = "com.journeyapps", name = "zxing-android-embedded", version.ref = "qrScanner" }
+
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
